--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: koalaman/shellcheck-alpine:stable
         environment:
-          SHELLCHECK_OPTS: "-e SC2086 -e SC2006 -e SC2154  -e SC2162 -e SC3043 -e SC2236 -e SC3024 -e SC2181 -e SC2046 -e SC2155 -e SC2126 -e SC2034"
+          SHELLCHECK_OPTS: "-e SC2086 -e SC2154  -e SC2162 -e SC3043 -e SC2236 -e SC3024 -e SC2181 -e SC2046 -e SC2155 -e SC2126 -e SC2034"
     steps:
      - checkout
      - run:
